<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Unter</string>

    <!--LoginActivity and SignupActivity-->
    <string name="username_input">Username</string>
    <string name="email_input">Email</string>
    <string name="mobile_input">Phone</string>
    <string name="select_role_text">Select A Role</string>
    <string name="rider_radio">Rider</string>
    <string name="driver_radio">Driver</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>

    <!--DriverCarInfoActivity-->
    <string name="vehicle_name_input">Vehicle Name</string>
    <string name="plate_number_input">Plate Number</string>

    <!--DriverMainActivity-->
    <string name="title_activity_driver_main">DriverMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--DriverSearchRequestActivity-->
    <string name="search_request">Search Request</string>
    <string name="search_result">Search Result</string>
    <string-array name="search_option">
        <item>Search request by geolocation</item>
        <item>Search request by keyword</item>
    </string-array>
    <string name="price_range">Price Range</string>
    <string name="price_per_km_range">Price per KM Range</string>

    <!--EditUserProfileActivity-->
    <string name="username">User Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="save_button">Save</string>
    <string name="new_username_input">Enter New User Name</string>
    <string name="new_email_input">Enter New Email Address</string>
    <string name="new_mobile_input">Enter New Mobile Phone Number</string>

    <!--DriverBrowseRequestActivity-->
    <string name="accepted_request">Accepted Request</string>
    <string name="pending_request">Pending Request</string>
    <string name="title_activity_rider_main">Unter</string>
    <string name="dialog_view_map_button">View Map</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_ok_button">Ok</string>
    <string name="dialog_confirm_completion_button">Confirm Complete</string>

    <!--DriverSearchRequestActivity-->
    <string name="search_button">Search</string>

    <!--DriverAcceptRequestActivity-->
    <string name="cancel_button">Cancel</string>
    <string name="accept_button">Accept</string>

    <!--RiderMainActivity-->
    <string name="dialog_view_request_button">View Request</string>
    <string name="dialog_send_request_button">Send Request</string>
    <string name="search_start_location">Search Starting Location</string>
    <string name="search_end_location">Search Destination Location</string>

    <!--RiderEnterLocationActivity-->
    <string name="search_location">Search Location</string>

    <!--RiderBrowseRequestActivity-->
    <string name="completed_request">Completed</string>
    <string name="inProgress_request">In Progress</string>
    <string name="title_activity_google_maps">Map</string>

    <!--RiderRequestDetailActivity-->
    <string name="acceptance">Acceptance</string>
    <string name="starting_location">Starting Location</string>
    <string name="ending_location">Ending Location</string>
    <string name="cancelRequest_button">Cancel Request</string>
    <string name="completeRequest_button">Complete Request</string>
    <string name="dialog_call_mobile_button">Call Mobile</string>
    <string name="dialog_send_email_button">Send Email</string>
    <string name="dialog_confirm_acceptance_button">Confirm Acceptance</string>
    <string name="dialog_description_editText">Enter Description</string>
    <string name="dialog_fare_edittext">Estimated Fare</string>

    <!--Activity label name-->
    <string name="label_driver_completed_request_activity">Your past request</string>
    <string name="label_driver_search_request_activity">Search request</string>
    <string name="label_rider_browse_request_activity">Your request</string>
    <string name="label_edit_user_profile_activity">Edit user profile</string>
</resources>
