<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.unter.view.EditUserProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/editText_userName_EditUserProfileActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_username_input"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:paddingTop="10dp"
        android:maxLines="1"/>


    <!--email-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText_email_EditUserProfileActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email_input"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:maxLines="1"/>

    <!--mobile-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText_mobile_EditUserProfileActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_mobile_input"
        android:inputType="phone"
        android:paddingTop="10dp"
        android:maxLines="1"/>


    <!--save button-->
    <Button
        android:id="@+id/button_save_EditUserProfileActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:paddingTop="20dp"
        android:paddingBottom="15dp"/>

</LinearLayout>
