<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 CMPUT301F16T18 - Alan(Xutong) Zhao, Michael(Zichun) Lin, Stephen Larsen, Yu Zhu, Zhenzhe Xu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="ca.ualberta.cs.unter.view.DriverCarInfoActivity">

    <!-- car model -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/edittext_vehcilename_drivercarinfoactivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicle_name_input"
                android:inputType="text"
                android:maxLines="1"
        />
    </android.support.design.widget.TextInputLayout>

    <!-- plate number -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/edittext_platenumber_drivercarinfoactivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plate_number_input"
                android:inputType="text"
                android:maxLines="1"
        />
    </android.support.design.widget.TextInputLayout>

    <!-- save button -->
    <Button
            android:id="@+id/button_save_drivercarinfoactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:paddingTop="20dp"/>

</LinearLayout>
